# phd

./: .gitignore  README.md  bibliografia.bib  bibliography_suggestions.txt  phd.tex  phd_jup.ipynb  visualisationsBW.ipynb
Neat23/: CMakeLists.txt  run_neat.cpp
Neat23/docs/: Doxyfile.in
Neat23/include/: agent.h  environment_endpoint.h  neat_core.h  numeric_types.h  utils.h
Neat23/src/: agent.cpp  neat_core.cpp  numeric_types.cpp  run_neat.cpp
PhdNeat/: CMakeLists.txt  run_neat
RestrictedNeat/: CMakeLists.txt  Doxyfile  requirements.txt  setup.py
RestrictedNeat/configs/: walker.txt
RestrictedNeat/include/: ai_gym_api.h  limneat.h
RestrictedNeat/scripts/: gym_runner.py  setup.py
article/: bibliografia.bib  gnys_przestrzelski.tex  kybernetika.tex  kybernetika2.tex  task.tex
article/figures/: brakeoff_compare.eps  rel_err_diff.eps
article0/: bibliografia-poprawiona.txt  bibliografia.bib  fixed.tex  gnys_przestrzelski.tex  korekta.txt  kybernetika.cls  kybernetika.tex  kybernetika2.tex
article0/figures/: bias_diffed.eps  bias_normalized.eps  bias_raw.eps  error_diff.eps  error_overwiev.eps
chapters/: classic_ml.tex  conclusions.tex  evolution.tex  experiments.tex  introduction.tex  machine_learning.tex  ml_gps.tex  navigation.tex  neural_networks.tex  time_metrology.tex
code/: Makefile
code-old/RestrictedNeat/: Doxyfile  setup.py
code-old/notebooks/: visualisationsBW.ipynb
code/final/: experiment_backend.py
code/include/: neuroevo_test.h
code/lib/: scaffolding.txt
code/scripts-old/: requirements.txt
code/src/: c_python_test.c  neuroevo-test.c  (+1 more)
code_final/: besel_prepare_data.py  prepare_data.py  requirements.txt
csv/: build_dataset.ipynb
diagrams/: agent_environment.drawio  agent_receptor.drawio  atomic_clock.drawio  auto_system.drawio  experiment_arch.drawio  experiment_pipes.drawio  genetic_algorithm.drawio  lstm_insides.drawio  neat-class.uxf  neat23.gaphor  neuro_xor.drawio  perceptron.drawio  pipeline.drawio  pipeline_new.drawio  prot_interaction.drawio  signal_model.drawio  signal_proc.drawio  simple_mode.drawio  sru.drawio
dissertation/: bibliografia.bib  phd.tex  phd_final.tex  presentation_1.tex
figures/: atomic_diagram.eps  bias_examples.eps  bio_activation.eps  bio_neurons.eps  dna_structure.eps  dropout.eps  early_stop.eps  ecef_coordinate.eps  epsilon_band.eps  filtered_noise.eps  gps_correction.eps  gradient_converge.eps  gradient_problem.eps  gradient_skip.eps  gru.eps  harmon.eps  modernized_gps_signal.eps  neuro_xor.eps  quartz_mounts.eps  rlc.eps  signal_proc.eps  single_crossover.eps  svm1.eps  tree_of_life.eps  wychodek.eps
notebooks/: dummy_plots.ipynb
others/: acknowledgements.tex  config.tex  metaconfig.tex  symbols.tex
paper/: bibliografia.bib  konspekt.txt  phd.run.xml  phd.tex
smoll_net/: CMakeLists.txt
smoll_net/include/: agent.h  environment.h  genetic.h  numeric.h
smoll_net/src/: agent.cpp  environment.cpp  genetic.cpp  main.cpp  numeric.cpp
smoll_net/templates/: config.txt  network.txt  test_dataset.csv
(+415 files in other folders)
